--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tauri-apps/api": "^2.2.0",
     "archiver": "^7.0.1",
     "chart.js": "^4.4.7",
+    "dompurify": "^3.3.1",
     "express": "^5.2.1",
     "multer": "^2.0.2",
     "react": "^19.0.0",
